tests/compile_fail/missing_type_after.out
In file included from tests/compile_fail/missing_type_after.cpp:20:
src/lguim/secureenumconverter.inc:27:6: error: #error "SEC_TYPE not defined"
     #error "SEC_TYPE not defined"
      ^~~~~
compilation terminated due to -Wfatal-errors.
